[package]

name = "declarative-dataflow"
version = "0.2.0"
authors = ["Nikolas Göbel <me@nikolasgoebel.com>", "Frank McSherry <fmcsherry@me.com>"]
edition = "2018"

description = "A reactive query engine built on Differential Dataflow."

documentation = "https://docs.rs/declarative-dataflow"
homepage = "https://github.com/comnik/declarative-dataflow"
repository = "https://github.com/comnik/declarative-dataflow.git"
keywords = ["differential", "dataflow",  "datalog", "graphql", "query"]
license = "MIT"

[dependencies]
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow", features = ["bincode"] , rev = "e8f627ecc672680cf20c6b782eda35d5d3f84679" }
differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow", rev = "22032200cdef3462c158691068725455be144888" }
serde = "1"
serde_derive = "1"
log = "0.4"
num-rational = { version = "0.2", features = ["std", "serde"] }
timely_sort = { path = "../../TimelyDataflow/timely-dataflow/sort/" }

serde_json = { version = "1", optional = true }
csv = { version = "1", optional = true }
chrono = { version = "0.4", optional = true }
uuid = { version = "0.7", features = ["serde"], optional = true }
graphql-parser = { version = "0.2.2", optional = true }
fixed = { version = "0.3.2", optional = true, features = ["serde"] }

[dev-dependencies]
env_logger = "0.5.6"

[features]
real-time = []
set-semantics = []
csv-source = ["csv", "chrono"]
json-source = ["serde_json", "chrono"]
graphql = ["graphql-parser", "serde_json"]
real = ["fixed"]

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
rpath = false
lto = false
codegen-units = 4

[patch.'https://github.com/TimelyDataflow/timely-dataflow']
timely = { path = "../../TimelyDataflow/timely-dataflow/timely/" }

[patch.'https://github.com/TimelyDataflow/differential-dataflow']
differential-dataflow = { path = "../../TimelyDataflow/differential-dataflow/" }
